added text field visual changes and text based text / typing cursor

--- a/core/assets/home/programs/htmlTester/assets/styles.css
+++ b/core/assets/home/programs/htmlTester/assets/styles.css
@@ -5,6 +5,8 @@ p {
 .cloud {
     background-color: white; 
     border-radius: 10px; 
+    border-width: 1px;
+    border-color: white;
     padding: 10px; 
     margin: 5px 10px 5px 10px;
 }
